use google java formatter to avoid downloading eclipse during build